# yt-dubber

./: .env.example  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/04-tts-synthesis/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  (+1 more)
JACKALL CC prefinal/data/: lures_database.json
fishing pro 5 CC FINAL/data/: lures_database.json
fishingpro_max2_prod/data/: lures_database.json
tests/: test_assembly.py  test_checkpoint.py  test_docx_exporter.py  test_subtitle_parser.py  test_translator.py  test_tts.py
yt_dubber/: audio_sync.py  checkpoint.py  cli.py  config.py  docx_exporter.py  extractor.py  merger.py  models.py  subtitle_parser.py  translator.py  tts.py
сезонност/: .gitignore  pytest.ini
сезонност/.planning/: ROADMAP.md  STATE.md
сезонност/bot/: backup.py  config.py  keyboards.py  main.py  pipeline.py  scheduler.py
сезонност/deploy/: README_deploy.md  skladetbot.service
сезонност/src/: apply_formatting.py  build_master.py  build_report.py  cbr_rates.py  compute_cost.py  normalize.py  order_finalize.py  order_plan.py  parse_ledger.py  parse_ostatki.py  parse_ostatki_weekly.py  parse_prikhody.py  parse_prodazhi.py  report_metrics.py  report_to_sheets.py  seasonality.py  sheets_client.py
сезонност/tests/: conftest.py  test_bot_backup.py  test_bot_handlers.py  test_bot_pipeline.py  test_bot_scheduler.py  test_parse_ledger.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4_formatting.py  test_phase4_metrics.py  test_phase4_order_finalize.py  test_phase4_seasonality.py  test_phase4_weekly.py
(+24 files in other folders)
