[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "yt-dubber"
version = "0.1.0"
description = "JP to RU YouTube dubbing pipeline"
requires-python = ">=3.10"
dependencies = [
    "yt-dlp>=2024.1.0",
    "anthropic>=0.34.0",
    "elevenlabs>=1.0.0",
    "python-docx>=1.1.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
    "pydub>=0.25.1",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "numpy>=1.24.0",
    "chardet>=5.0.0",
]

[project.optional-dependencies]
stretch = ["pyrubberband>=0.3.0"]

[project.scripts]
yt-dubber = "yt_dubber.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["yt_dubber"]
